tests/error/alias_errors/enum_cycle.err
Error: Recursive type alias (at $FILE:15:0)
   | 
13 | 
14 | # Alias whose body refers to itself via an enum type argument
15 | MyAlias = guppy.type_alias("MyAlias", "Option[MyAlias]")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type alias `MyAlias` expands to itself

Guppy compilation failed due to 1 previous error
